--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -4,7 +4,7 @@ name: build
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
-    branches: [ "master", "feat/gh-workflow" ]
+    branches: [ "master"]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
