--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,21 +1,21 @@
-site_name: BRH Markdown Test - QA v0.0
-site_url: https://qa-brh.planx-pla.net
-repo_url:
+site_name: Biomedical Research Hub Documentation
+site_url: https://brh.data-commons.org/
+repo_url: https://github.com/uc-cdis/BRH-documentation
 nav:
-  - Home: home.md
   - Return to BRH Platform: https://brh.data-commons.org/
-  - Types of Shared Data: types_of_shared_data.md
-  - Data Management and Repositories: data_and_repos.md
+  - Home: 01-home.md
   - How to Get Started:
-    - BRH Overview: BRH_overview.md
-    - Workspace Registration: workspace_registration.md
-    - Login Page: loginoverview.md
-    - How to Check Request Access: how_to_check_request_access.md
-    - Discovery Page: discovery_page.md
-    - Workspaces Page: workspace_page.md
-    - Profile Page: profile_page.md
-  - Downloading Data Files: downloading_data_files.md
-  - Contact: contact.md
+    - Quickstart - BRH Overview: 04-BRH_overview.md
+    - Workspace Registration: 05-workspace_registration.md
+    - Login Page: 06-loginoverview.md
+    - How to Check & Request Access: 07-how_to_check_request_access.md
+    - Discovery Page: 08-discovery_page.md
+    - Workspaces Page: 09-workspace_page.md
+    - Profile Page: 10-profile_page.md
+  - FAIR Data: 02-types_of_shared_data.md
+  - Data Management and Repositories: 03-data_and_repos.md
+  - Downloading Data Files: 11-downloading_data_files.md
+  - Contact: 12-contact.md
 
 theme:
   favicon: img/favicon.ico
