--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,7 +8,7 @@ nav:
     - Quickstart - BRH Overview: 04-BRH_overview.md
     - Workspace Page (Registration): 05-workspace_registration.md
     - Login Page: 06-loginoverview.md
-    - Request Study Access and Link Accounts: 07-how_to_check_request_access.md
+    - Check Study Access and Authorize Resources: 07-how_to_check_request_access.md
     - Discovery Page: 08-discovery_page.md
     - Profile Page: 10-profile_page.md
   - Workspace User Guide:
