continuing updates for nextflow documentation

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -24,10 +24,12 @@ nav:
   - Contact: 12-contact.md
   - '':
     - Nextflow - Getting Started: nextflow-getting-started.md
+    - Nextflow - General Workflows: nextflow-tutorial-1.md
+    - Nextflow - Containers in Gen3: nextflow-overview-containers.md
     - Nextflow - Create Dockerfile: nextflow-create-docker.md
     - Nextflow - Request Credentials: nextflow-request-creds.md
     - Nextflow - Upload Docker Image: nextflow-upload-docker.md
-    - Nextflow - Tutorial Workflows: nextflow-tutorial-workflows.md
+    - Nextflow - Tutorials with Containers: nextflow-tutorial-workflows.md
 
 theme:
   favicon: img/favicon.ico
