update Nextflow documentation before testing

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -19,17 +19,16 @@ nav:
     - If Compute Usage Exceeds Funding: 16-usage_exceeds_funding.md
     - Downloading Data Files: 11-downloading_data_files.md
     - Workspace FAQ: 17-workspace_faq.md
-  - FAIR Data: 02-types_of_shared_data.md
-  - Data Management and Repositories: 03-data_and_repos.md
-  - Contact: 12-contact.md
-  - '':
+  - Nextflow User Guide:
     - Nextflow - Getting Started: nextflow-getting-started.md
-    - Nextflow - General Workflows: nextflow-tutorial-1.md
     - Nextflow - Containers in Gen3: nextflow-overview-containers.md
     - Nextflow - Create Dockerfile: nextflow-create-docker.md
     - Nextflow - Request Credentials: nextflow-request-creds.md
     - Nextflow - Upload Docker Image: nextflow-upload-docker.md
-    - Nextflow - Tutorials with Containers: nextflow-tutorial-workflows.md
+    - Nextflow - Tutorials Workflows: nextflow-tutorial-workflows.md
+  - FAIR Data: 02-types_of_shared_data.md
+  - Data Management and Repositories: 03-data_and_repos.md
+  - Contact: 12-contact.md
 
 theme:
   favicon: img/favicon.ico
